new commitment nov 9

--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
             </ul>
         </nav>
     </header>
-    <main>
-    <section class="landing"></section>
-    <section class="skills"></section>
+    <main id="sectionmain">
+    <section class="landing">
+        <div><p><h1>KELVIN MBUGUA</h1><br><H2>CYBER SECURITY CONSULTANT</H2></p></div>
+        <div><img src="profile.jpg" alt="profile_picture" id="profile" ></div>
+    </section>
     </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
