--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main id="sectionmain">
     <section class="landing">
         <p>Contact Me</p>
     </section>
