--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main id="sectionmain">
     <section class="landing">
         <div><p><h1>KELVIN MBUGUA</h1><br><H2>CYBER SECURITY CONSULTANT</H2></p></div>
-        <div><img src="profile.jpg" alt="profile_picture" id="profile" ></div>
+        <div><img src="/images/javascript.jpg" alt="profile_picture" id="profile" ></div>
     </section>
     </main>
     <footer>
