--- a/pages/about.html
+++ b/pages/about.html
@@ -20,12 +20,47 @@
                 
             </ul>
         </nav>
-    </header>
     <main>
-    <section class="landing">
-        <p>About Me</p>
-    </section>
-    <section class="skills"></section>
+        <section>
+            <h2>
+                Project Development and Implemetation
+            </h2>
+            <p>
+                I use the programming lanuags stated below to create client satisfying projects <br>and user applications
+                <br>I have advanced practical expirience in 
+                <ul id="aboutlist">
+                    <li>
+                        JavaScript for front-end web Development <br>
+                        <img src="/images/javascript.jpg" alt="JAVASCRIPT IMAGE" id="progabout">
+                    </li>
+                    <li>
+                        Html & CSS canvas <br>
+                        <img src="/images/htmlcss.jpg" alt="HTML CSS LOGO OBJECTS" id="progabout">
+                    </li>
+                    <li>
+                        MySQL
+                        <br><img src="/images/mysql.jpg" alt="MySQL" id="progabout">
+                    </li>
+                    <li>PhP back-end Development
+                        <br>
+                        <img src="/images/php.jpg" alt="php" id="progabout">
+                    </li>
+                    <li>
+                        Java Object Oriented <br>
+                        <img src="/images/java.jpg" alt="java" id="progabout">
+                    </li>
+                    <li>Python programming
+                        <br> <img src="/images/python.gif" alt="py" id="progabout">
+                    </li>
+                    <li>
+                        Django python databases 
+                      <br>
+                      <img src="/images/django.gif" alt="django database" id="progabout">
+                    </li>
+                </ul>
+            </p>
+        </section>
     </main>
+    
 </body>
 </html>
