--- a/pages/about.html
+++ b/pages/about.html
@@ -60,7 +60,26 @@
                 </ul>
             </p>
         </section>
-    </main>
     
+    <footer>
+        <ul class="alldocfooter">
+            <li>
+                <img src="/images/giticon.png" alt="github_icon" class="footerimages">
+            </li>
+            <li>
+                <img src="/images/xlogo.jpg" alt="twitter" class="footerimages">
+            </li>
+            <li>
+                <img src="/images/whatsicon.png" alt="whatsicon" class="footerimages">
+            </li>
+            <li>
+                <img src="/images/upwork.jpg" alt="upwork" class="footerimages">
+            </li>
+            <li>
+                <img src="/images/mail.jpg" alt="mail" class="footerimages">
+            </li>
+        </ul>
+        </footer>
+    </main>
 </body>
 </html>
