--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -25,7 +25,23 @@
     <section class="landing">
         <p>My Portfolio</p>
     </section>
-    <section class="skills"></section>
+    <footer>
+        <ul class="alldocfooter">
+            <li>
+                <img src="/images/giticon.png" alt="github_icon" class="footerimages">
+            </li>
+            <li>
+                <img src="/images/xlogo.jpg" alt="twitter" class="footerimages">
+            </li>
+            <li>
+                <img src="/images/whatsicon.png" alt="whatsicon" class="footerimages">
+            </li>
+            <li>
+                <img src="/images/upwork.jpg" alt="upwork" class="footerimages">
+            </li>
+            <li>
+                <img src="/images/mail.jpg" alt="mail" class="footerimages">
+            </li>
     </main>
 </body>
 </html>
