--- a/index.html
+++ b/index.html
@@ -26,9 +26,24 @@
         <div><p><h1>KELVIN MBUGUA</h1><br><H2>CYBER SECURITY CONSULTANT</H2></p></div>
         <div><img src="/images/javascript.jpg" alt="profile_picture" id="profile" ></div>
     </section>
-    </main>
+    
     <footer>
-        
-    </footer>
-</body>
+        <ul class="alldocfooter">
+            <li>
+                <img src="/images/giticon.png" alt="github_icon" class="footerimages">
+            </li>
+            <li>
+                <img src="/images/xlogo.jpg" alt="twitter" class="footerimages">
+            </li>
+            <li>
+                <img src="/images/whatsicon.png" alt="whatsicon" class="footerimages">
+            </li>
+            <li>
+                <img src="/images/upwork.jpg" alt="upwork" class="footerimages">
+            </li>
+            <li>
+                <img src="/images/mail.jpg" alt="mail" class="footerimages">
+            </li>
+    </main>
+ </body>
 </html>
