--- a/pages/about.html
+++ b/pages/about.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
     <main>
-        <section>
+        <section id="aboutsection">
             <h2>
                 Project Development and Implemetation
             </h2>
