commiting contacts form

--- a/pages/about.html
+++ b/pages/about.html
@@ -29,6 +29,7 @@
                 I use the programming lanuags stated below to create client satisfying projects <br>and user applications
                 <br>I have advanced practical expirience in 
                 <ul id="aboutlist">
+                    <div>
                     <li>
                         JavaScript for front-end web Development <br>
                         <img src="/images/javascript.jpg" alt="JAVASCRIPT IMAGE" id="progabout">
@@ -44,7 +45,7 @@
                     <li>PhP back-end Development
                         <br>
                         <img src="/images/php.jpg" alt="php" id="progabout">
-                    </li>
+                    </li></div><div>
                     <li>
                         Java Object Oriented <br>
                         <img src="/images/java.jpg" alt="java" id="progabout">
@@ -54,7 +55,7 @@
                     </li>
                     <li>
                         Django python databases 
-                      <br>
+                      <br></div>
                       <img src="/images/django.gif" alt="django database" id="progabout">
                     </li>
                 </ul>
