--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,7 +23,15 @@
     </header>
     <main id="sectionmain">
     <section class="landing">
-        <p>Contact Me</p>
+        <p><ul class="contactlist">
+            <li><a href="https://github.com/Kelvin-Mbugua-M" class="contacticons">
+                <p>Find my public repositories on git hub <br> <img src="/images/giticon.png" alt="" class="contactimages"></p></a>
+            </li>
+            <li><a href="twitter.org" class="contacticons">Share on twitter @ larvey Kelvin Mbugua M <img src="/images/xlogo.jpg" alt="" class="contactimages"></a></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul></p>
     </section>
     <footer>
         <ul class="alldocfooter">
